force-app/main/default/objects/Datatable_Column__mdt/Datatable_Column__mdt.object-meta.xml
<CustomObject>
    <label>Datatable Column</label>
    <pluralLabel>Datatable Columns</pluralLabel>
</CustomObject>