force-app/main/default/objects/Datatable_Column__mdt/fields/Additional_Props_JSON__c.field-meta.xml
<CustomField>
    <fullName>Additional_Props_JSON__c</fullName>
    <label>Additional Props (JSON)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>