force-app/main/default/objects/Datatable_Column__mdt/fields/Custom_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Type_Name__c</fullName>
    <label>Custom Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>