force-app/main/default/objects/Datatable_Column__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>boolean</fullName>
            </value>
            <value>
                <fullName>button</fullName>
            </value>
            <value>
                <fullName>button-icon</fullName>
            </value>
            <value>
                <fullName>currency</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>date-local</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>location</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>percent</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
            <value>
                <fullName>custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>