force-app/main/default/objects/Datatable_Column__mdt/fields/Field_Api__c.field-meta.xml
<CustomField>
    <fullName>Field_Api__c</fullName>
    <label>Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>